--- a/src/drivers/uavcan/Kconfig
+++ b/src/drivers/uavcan/Kconfig
@@ -14,6 +14,10 @@ if DRIVERS_UAVCAN
         bool "Include beep controller"
         default y
 
+    config UAVCAN_BATTERY_INFO
+	bool "Publish battery info"
+	default y
+
     config UAVCAN_OUTPUTS_CONTROLLER
         bool "Include servo & ESC controller"
         default y
