Added boat_loiter and fixed bug with safe mode.

--- a/src/modules/boat_differential/BoatDriveModes/CMakeLists.txt
+++ b/src/modules/boat_differential/BoatDriveModes/CMakeLists.txt
@@ -32,5 +32,6 @@
 ############################################################################
 
 add_subdirectory(BoatAutoMode)
+add_subdirectory(BoatLoiterMode)
 add_subdirectory(BoatManualMode)
 add_subdirectory(BoatOffboardMode)
