--- a/src/modules/boat_vectorthrust/VectorThrustDriveModes/CMakeLists.txt
+++ b/src/modules/boat_vectorthrust/VectorThrustDriveModes/CMakeLists.txt
@@ -32,5 +32,6 @@
 ############################################################################
 
 add_subdirectory(VectorThrustAutoMode)
+add_subdirectory(VectorThrustLoiterMode)
 add_subdirectory(VectorThrustManualMode)
 add_subdirectory(VectorThrustOffboardMode)
